# glengine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TODO.txt
cmk/: FindLua.cmake
demos/: CMakeLists.txt  mydemo.c
engine/: CMakeLists.txt  config_manager.cpp  core.cpp  event.cpp  event_manager.cpp  globals.cpp  log_manager.cpp  profiler.cpp  screen.cpp  shader_manager.cpp  system.cpp  window.cpp
engine/sys/: cfg.cpp  gstate.cpp  gui.cpp  input.cpp  log.cpp  state.cpp
engine/sys/gstate/: state.cpp
engine/sys/gui/: base.cpp  helpers.cpp  layout.cpp
engine/sys/gui/api/: rectangle.cpp  triangle.cpp
engine/sys/gui/components/: button.cpp  image.cpp  label.cpp  window.cpp
engine/tools/: shader.cpp
ext/: CMakeLists.txt
ext/luastate/include/: LuaStack.h
ext/soil/: CMakeLists.txt
include/engine/: config_manager.hpp  core.hpp  event.hpp  event_manager.hpp  globals.hpp  log_manager.hpp  profiler.hpp  screen.hpp  shader_manager.hpp  system.hpp  window.hpp
include/engine/sys/: cfg.hpp  gstate.hpp  gui.hpp  input.hpp  log.hpp  state.hpp
include/engine/sys/gstate/: state.hpp
include/engine/sys/gui/: base.hpp  helpers.hpp  layout.hpp
include/engine/sys/gui/api/: drawable.hpp  rectangle.hpp  triangle.hpp
include/engine/sys/gui/components/: all.hpp  button.hpp  image.hpp  label.hpp  window.hpp
include/engine/tools/: shader.hpp
include/libname/: mylib.h
src/: CMakeLists.txt  main.cpp  main2.cpp  mylib.c
src/screens/: simple.cpp
src/states/: main_screen.cpp  main_screen.hpp
