CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(VERSION_LOW 0)
SET(VERSION_UP 1)

PROJECT(GLENGINE C CXX)

## helpers -----------
FUNCTION( prepend_str SOURCE_FILES PRESTR )
  FOREACH( SOURCE_FILE ${${SOURCE_FILES}} )
    SET( MODIFIED ${MODIFIED} ${PRESTR}${SOURCE_FILE} )
  ENDFOREACH()
  SET( ${SOURCE_FILES} ${MODIFIED} PARENT_SCOPE )
ENDFUNCTION()

FUNCTION( append_str SOURCE_FILES APPSTR )
  FOREACH( SOURCE_FILE ${${SOURCE_FILES}} )
    SET( MODIFIED ${MODIFIED} ${SOURCE_FILE}${APPSTR} )
  ENDFOREACH()
  SET( ${SOURCE_FILES} ${MODIFIED} PARENT_SCOPE )
ENDFUNCTION()
## --------------------------

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmk/" ${CMAKE_MODULE_PATH})

SET(GENERAL_C_FLAGS "-std=c99 -Wall -Wextra -pg")
SET(DEBUG_C_FLAGS "-g")
SET(RELEASE_C_FLAGS "-O3 -s")
SET(GENERAL_CXX_FLAGS "-std=c++11 -Wall -Wextra -pg")
SET(DEBUG_CXX_FLAGS ${DEBUG_C_FLAGS})
SET(RELEASE_CXX_FLAGS ${RELEASE_C_FLAGS})

IF(UNIX)
	SET(CMAKE_C_FLAGS "${GENERAL_C_FLAGS}")
	SET(CMAKE_C_FLAGS_DEBUG "${GENERAL_C_FLAGS} ${DEBUG_C_FLAGS}")
	SET(CMAKE_C_FLAGS_RELEASE "${GENERAL_C_FLAGS} ${RELEASE_C_FLAGS}")
	SET(CMAKE_CXX_FLAGS "${GENERAL_CXX_FLAGS}")
	SET(CMAKE_CXX_FLAGS_DEBUG "${GENERAL_CXX_FLAGS} ${DEBUG_CXX_FLAGS}")
	SET(CMAKE_CXX_FLAGS_RELEASE "${GENERAL_CXX_FLAGS} ${RELEASE_CXX_FLAGS}")
ENDIF()

## extlib include directories
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ext/glfw/include)
## --------------------------

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(ext)
ADD_SUBDIRECTORY(src)
