CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(VERSION_LOW 0)
SET(VERSION_UP 1)

PROJECT(GLENGINE C CXX)

## helpers -----------
FUNCTION( prepend_str SOURCE_FILES PRESTR )
  FOREACH( SOURCE_FILE ${${SOURCE_FILES}} )
    SET( MODIFIED ${MODIFIED} ${PRESTR}${SOURCE_FILE} )
  ENDFOREACH()
  SET( ${SOURCE_FILES} ${MODIFIED} PARENT_SCOPE )
ENDFUNCTION()

FUNCTION( append_str SOURCE_FILES APPSTR )
  FOREACH( SOURCE_FILE ${${SOURCE_FILES}} )
    SET( MODIFIED ${MODIFIED} ${SOURCE_FILE}${APPSTR} )
  ENDFOREACH()
  SET( ${SOURCE_FILES} ${MODIFIED} PARENT_SCOPE )
ENDFUNCTION()
## --------------------------

SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmk/" ${CMAKE_MODULE_PATH})

SET(GENERAL_C_FLAGS "-std=c99 -Wall -Wextra -fPIC")
SET(DEBUG_C_FLAGS "-g")
SET(RELEASE_C_FLAGS "-O3")

SET(GENERAL_CXX_FLAGS "-std=c++11 -Wall -Wextra -fPIC")
SET(DEBUG_CXX_FLAGS "-g")
SET(RELEASE_CXX_FLAGS "-O3")

IF(UNIX)
	SET(CMAKE_C_FLAGS "${GENERAL_C_FLAGS}")
	SET(CMAKE_C_FLAGS_DEBUG "${GENERAL_C_FLAGS} ${DEBUG_C_FLAGS}")
	SET(CMAKE_C_FLAGS_RELEASE "${GENERAL_C_FLAGS} ${RELEASE_C_FLAGS}")
	
	SET(CMAKE_CXX_FLAGS "${GENERAL_CXX_FLAGS}")
	SET(CMAKE_CXX_FLAGS_DEBUG "${GENERAL_CXX_FLAGS} ${DEBUG_CXX_FLAGS}")
	SET(CMAKE_CXX_FLAGS_RELEASE "${GENERAL_CXX_FLAGS} ${RELEASE_CXX_FLAGS}")
ENDIF()

## non-built-in deps
FIND_PACKAGE(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_PATH})

IF(${LUA_VERSION})
ELSE()
	SET(LUA_VERSION 5.1)
ENDIF()

FIND_PACKAGE(Lua ${LUA_VERSION} REQUIRED)
INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})

FIND_PACKAGE(Freetype REQUIRED)
INCLUDE_DIRECTORIES(${FREETYPE_INCLUDE_DIRS})

FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
## --------------------------

## extlib include directories
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ext/glfw/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ext/glm)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ext/rapidjson/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ext/luastate/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/ext/freetype-gl)
## --------------------------

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(ext)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(src)
