SET(DEMOS
	mydemo
)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

FOREACH( DEMO ${DEMOS} )
	ADD_EXECUTABLE(${DEMO} ${PROJECT_SOURCE_DIR}/demos/${DEMO}.c)
	
	TARGET_LINK_LIBRARIES(${DEMO} mylib)
	
	## link extlibs
	#TARGET_LINK_LIBRARIES(${DEMO} anextlib)
	## --------------------------
ENDFOREACH()
