SET(SRCS
	main.cpp
)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

prepend_str(SRCS ${PROJECT_SOURCE_DIR}/src/)

ADD_EXECUTABLE(milsim ${SRCS})

TARGET_LINK_LIBRARIES(milsim engine)

## link extlibs
TARGET_LINK_LIBRARIES(milsim glfw ${GLFW_LIBRARIES})
TARGET_LINK_LIBRARIES(milsim GLEW ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(milsim lua${LUA_VERSION} ${LUA_LIBRARIES})
TARGET_LINK_LIBRARIES(milsim ${FREETYPE_LIBRARIES})
## --------------------------
